--- a/Laba2.net/Laba2.net/MainWindow.xaml
+++ b/Laba2.net/Laba2.net/MainWindow.xaml
@@ -1,21 +1,25 @@
 ﻿<Window x:Class="Laba2.net.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="425">
-    <Grid>
+        Title="MainWindow" Height="425" Width="550" ResizeMode="NoResize" >
+    <Grid>        
         <Grid.Background>
             <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                <GradientStop Color="#006B6D" Offset="0"/>
-                <GradientStop Color="#00D4D8" Offset="1"/>                   
+                <GradientStop Color="#96006B6D" Offset="0"/>
+                <GradientStop Color="#0000D4D8" Offset="1"/>                   
                     
             </LinearGradientBrush>
         </Grid.Background>
-        <Button Content="..." Height="23" HorizontalAlignment="Left" Margin="12,13,0,0" Name="button1" VerticalAlignment="Top" Width="19" Click="button1_Click" Foreground="White" Background="#31FFFFFF" OpacityMask="#FE000000">
+        <Button Content="..." Height="23" HorizontalAlignment="Left" Margin="12,13,0,0" Name="button1" VerticalAlignment="Top" Width="19" Click="button1_Click" Foreground="Black" Background="#31FFFFFF" OpacityMask="#FE000000">
             <Button.BorderBrush>
                 <SolidColorBrush />
             </Button.BorderBrush>
         </Button>
-        <TextBox Text="оберіть папку для пошуку" Height="23" HorizontalAlignment="Left" Margin="37,13,0,0" Name="textBox1" VerticalAlignment="Top" Width="164" OpacityMask="Black" Background="#31FFFFFF" BorderBrush="#00000000" Foreground="White" FontFamily="Segoe UI" FontSize="12"></TextBox>
-        <TextBlock Height="234" HorizontalAlignment="Left" Margin="12,52,0,0" Name="textBlock1" Text="" VerticalAlignment="Top" Width="379" Background="#31FFFFFF" Foreground="White" FontFamily="Segoe UI" FontSize="8" />
+        <TextBox Text="оберіть папку для пошуку" Height="23" HorizontalAlignment="Left" Margin="37,13,0,0" Name="textBox1" VerticalAlignment="Top" Width="164" OpacityMask="Black" Background="#31FFFFFF" BorderBrush="#00000000" Foreground="#F04C4C4C" FontFamily="Segoe UI" FontSize="12"></TextBox>
+        <TextBox Height="310" HorizontalAlignment="Left" Margin="12,55,0,0" Name="textBox2" VerticalAlignment="Top" Width="369" Background="#31FFFFFF" Foreground="Black" Text="" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+            <TextBox.BorderBrush>
+                <SolidColorBrush />
+            </TextBox.BorderBrush>
+        </TextBox>
     </Grid>
 </Window>
