--- a/Laba2.net/Laba2.net/MainWindow.xaml
+++ b/Laba2.net/Laba2.net/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Laba2.net.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="425" Width="550" ResizeMode="NoResize" >
+        Title="MainWindow" Height="425" Width="550" ResizeMode="NoResize">
     <Grid>        
         <Grid.Background>
             <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
@@ -10,16 +10,27 @@
                     
             </LinearGradientBrush>
         </Grid.Background>
-        <Button Content="..." Height="23" HorizontalAlignment="Left" Margin="12,13,0,0" Name="button1" VerticalAlignment="Top" Width="19" Click="button1_Click" Foreground="Black" Background="#31FFFFFF" OpacityMask="#FE000000">
+        <Button Content="..." Height="23" HorizontalAlignment="Left" Margin="12,13,0,0" Name="button1" VerticalAlignment="Top" Width="31" Click="button1_Click" Foreground="Black" Background="#31FFFFFF" OpacityMask="#FE000000">
             <Button.BorderBrush>
                 <SolidColorBrush />
             </Button.BorderBrush>
         </Button>
-        <TextBox Text="оберіть папку для пошуку" Height="23" HorizontalAlignment="Left" Margin="37,13,0,0" Name="textBox1" VerticalAlignment="Top" Width="164" OpacityMask="Black" Background="#31FFFFFF" BorderBrush="#00000000" Foreground="#F04C4C4C" FontFamily="Segoe UI" FontSize="12"></TextBox>
-        <TextBox Height="310" HorizontalAlignment="Left" Margin="12,55,0,0" Name="textBox2" VerticalAlignment="Top" Width="369" Background="#31FFFFFF" Foreground="Black" Text="" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+        <TextBox Text="chose first folder to search" Height="23" HorizontalAlignment="Left" Margin="49,14,0,0" Name="textBox1" VerticalAlignment="Top" Width="201" OpacityMask="Black" Background="#31FFFFFF" BorderBrush="#00000000" Foreground="#F04C4C4C" FontFamily="Segoe UI" FontSize="12"></TextBox>
+        <TextBox Height="287" HorizontalAlignment="Left" Margin="12,78,0,0" Name="textBox2" VerticalAlignment="Top" Width="369" Background="#31FFFFFF" Foreground="Black" Text=" " HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
             <TextBox.BorderBrush>
                 <SolidColorBrush />
             </TextBox.BorderBrush>
         </TextBox>
+        <Button Content="..." Height="23" HorizontalAlignment="Left" Margin="12,42,0,0" Name="button2" VerticalAlignment="Top" Width="31" Background="#31FFFFFF" OpacityMask="#FE000000" Click="button2_Click">
+            <Button.BorderBrush>
+                <SolidColorBrush />
+            </Button.BorderBrush>
+        </Button>
+        <TextBox Height="23" HorizontalAlignment="Left" Margin="49,43,0,0" Name="textBox3" VerticalAlignment="Top" Width="201" Background="#31FFFFFF" BorderBrush="#00000000" Foreground="#F04C4C4C" OpacityMask="Black" Text="chose second folder to search" />
+        <Button Content="Search" Height="23" HorizontalAlignment="Left" Margin="306,14,0,0" Name="button3" VerticalAlignment="Top" Width="75" Background="#31FFFFFF" OpacityMask="#FE000000" Click="button3_Click">
+            <Button.BorderBrush>
+                <SolidColorBrush />
+            </Button.BorderBrush>
+        </Button>
     </Grid>
 </Window>
